Fixed dark mode colours for info section

--- a/src/App.css
+++ b/src/App.css
@@ -364,6 +364,11 @@ input[type="number"] {
   background-color: var(--main-lighter-background-color-dark);
 }
 
+.dark-info {
+  color: white;
+  background-color: rgb(25, 25, 25);
+}
+
 .dark-font {
   color: white;
 }
